# kum4

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  bugs.txt  features.txt
.github/workflows/: ci.yml  release.yml
scripts/: testnet.ps1
src/: bitcoin_tx.rs  config.rs  crypto.rs  database.rs  dht.rs  error.rs  exchange.rs  gossip.rs  main.rs  monitor.rs  p2p.rs  price.rs  rebalance.rs  reputation.rs  telegram_bot.rs  tor_client.rs  wallet.rs  web.rs
templates/: exchange.html  index.html
tests/: dht_testnet.rs
